# autointerface

./: .gitignore  README.md  analysis.py  demo.py  essay.md  evolve.py  generate.py  pyproject.toml  score.py  screenshot.py  spec.md
examples/: dashboard-spec.md  landing-page-spec.md  settings-panel-spec.md
