[project]
name = "autointerface"
version = "0.1.0"
description = "Autonomous interface evolution. Write a spec. Walk away. Wake up to a working interface."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
